fix: add overflow:hidden to demo for better mobile experience

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
 body {
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
 
 #root {
@@ -31,4 +32,5 @@ label {
 input[type='text'] {
   width: fit-content;
   margin-right: 6px;
+  overscroll-behavior: none;
 }
